#task 176 add profile photo in S3 bucket
